# promptic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs_site/architecture/: unified-context-node.md
docs_site/context-engineering/: adapter-guide.md  blueprint-guide.md  execution-recipes.md  file-first-architecture.md  format-parser-extension.md  hierarchical-markdown.md  jinja2-templating.md  markdown-templating.md  multi-format-nodes.md  quickstart-validation.md  recursive-networks.md  template-context-variables.md  yaml-templating.md
docs_site/guides/: version-classifiers.md  version-prereleases.md  versioning-configuration.md
docs_site/integration/: tg-note-integration-analysis.md
docs_site/prompt-versioning/: versioning-guide.md
docs_site/reference/: versioning-api.md
docs_site/variables/: insertion-guide.md
examples/: README.md
examples/advanced/: README.md
examples/complete/: README.md  end_to_end.py  research_flow.yaml
examples/file-first-examples/: README.md
examples/get_started/: README.md
examples/hierarchical-markdown/: README.md  render_hierarchical.py
examples/jinja2-templating/: README.md
examples/markdown-templating/: README.md
examples/tutorials/: README.md
examples/us1-blueprints/: README.md  run_preview.py  settings.yaml  simple_blueprint.yaml
examples/us1-markdown-templating/: render_markdown.py
examples/us2-adapters/: README.md  blueprint.yaml  settings.yaml  swap_adapters.py
examples/us2-jinja2-templating/: instruction.jinja  render_jinja2.py
examples/us3-pipelines/: README.md  hierarchical_blueprint.yaml  run_pipeline.py  settings.yaml
examples/us3-yaml-patterns/: README.md  render_yaml.py
examples/us4-hierarchical-markdown/: README.md  instruction.md
examples/versioning/: README.md  export_script.py  run_examples.py
examples/yaml-patterns/: instruction.yaml
specs/001-context-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-instruction-templating/: data-model.md  integration-analysis.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-instruction-templating/: integration-analysis.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-file-first-prompts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-unified-context-node/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-prompt-versioning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-remove-unused-code/: clarifications.md  data-model.md  plan.md  quickstart.md  removal-analysis.md  research.md  spec.md  tasks.md
specs/007-variable-insertion/: IMPLEMENTATION_SUMMARY.md  plan.md  spec.md  tasks.md
specs/008-solid-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
(+460 files in other folders)
