[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptic"
version = "0.1.0"
description = "Context engineering toolkit for prompts, instructions, data, and memory pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Promptic Team" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# AICODE-NOTE: Removed unused dependencies after cleanup:
# - tiktoken>=0.5.0 (token counting removed)
# - pydantic-settings>=2.2 (settings package removed)
# - rich>=13.7 (only used by blueprint preview, which was removed)
dependencies = [
    "pydantic>=2.6",
    "jinja2>=3.1",
    "orjson>=3.9",
    "pyyaml>=6.0",
    "regex>=2023.10",
    "eval_type_backport>=0.2",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.98",
    "mypy>=1.11",
    "types-PyYAML>=6.0.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["promptic"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]
exclude = [
    "examples/",
    "tests/",
]
